--- a/data_val_train_kfold/splits.ipynb
+++ b/data_val_train_kfold/splits.ipynb
@@ -29,7 +29,7 @@
     "for train_index, test_index in kf.split(data_pd):\n",
     "    print(train_index.shape, count)\n",
     "    data_pd.iloc[train_index].to_csv(f'./partition_{count}_train.csv')\n",
-    "    data_pd.iloc[test_index].to_csv(f'./partition_{count}_test.csv')\n",
+    "    data_pd.iloc[test_index].to_csv(f'./partition_{count}_val.csv')\n",
     "    if count > 4:\n",
     "        break\n",
     "    count+=1"
