--- a/ALS/als_5fold.ipynb
+++ b/ALS/als_5fold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "93b18903",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\natha\\anaconda3\\lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From /home/david/.local/lib/python3.8/site-packages/tensorflow/python/compat/v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "non-resource variables are not supported in the long term\n"
      ]
@@ -34,7 +34,6 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "import random\n",
-    "from dataset import extract_matrix_users_movies_ratings, extract_users_movies_ratings_lists\n",
     "from libreco.data import split_by_ratio_chrono, DatasetPure\n",
     "from libreco.algorithms import ALS\n",
     "from sklearn.metrics import mean_squared_error"
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6402eed0",
    "metadata": {},
    "outputs": [],
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6d1b09e9",
    "metadata": {},
    "outputs": [],
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "dadcb278",
    "metadata": {},
    "outputs": [],
@@ -83,19 +82,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "323409d8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'eval_ensemble' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_114786/2402640127.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0meval_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDatasetPure\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild_evalset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mscore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meval_ensemble\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_info\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0musers_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmovies_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mratings_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0musers_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmovies_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mscores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'eval_ensemble' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training start time: \u001b[35m2022-07-29 16:53:32\u001b[0m\n",
+      "Training start time: \u001b[35m2022-07-29 16:53:33\u001b[0m\n",
+      "Training start time: \u001b[35m2022-07-29 16:53:35\u001b[0m\n",
+      "Training start time: \u001b[35m2022-07-29 16:53:36\u001b[0m\n",
+      "Training start time: \u001b[35m2022-07-29 16:53:37\u001b[0m\n",
+      "Training start time: \u001b[35m2022-07-29 16:53:38\u001b[0m\n",
+      "Training start time: \u001b[35m2022-07-29 16:53:39\u001b[0m\n",
+      "Training start time: \u001b[35m2022-07-29 16:53:39\u001b[0m\n",
+      "Training start time: \u001b[35m2022-07-29 16:53:40\u001b[0m\n",
+      "Training start time: \u001b[35m2022-07-29 16:53:41\u001b[0m\n",
+      "Training start time: \u001b[35m2022-07-29 16:53:42\u001b[0m\n"
      ]
     }
    ],
@@ -117,26 +122,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "515c82a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def eval_ensemble(split, train_data, data_info, users_val, movies_val, ratings_val, users_test, movies_test):\n",
-    "    emb_sizes = [2,3,4,5,6,7,8,9,10,11,16,32,58]\n",
-    "    regs = [0.1, 0.5, 1, 5, 10]\n",
-    "    alphas = [0.01, 0.1, 1, 5, 8, 10, 100]\n",
-    "    david_val = np.zeros((len(emb_sizes) * len(regs) * len(alphas), len(users_val)))\n",
-    "    david_test = np.zeros((len(emb_sizes) * len(regs) * len(alphas), len(users_test)))\n",
+    "    emb_sizes = [2,3,4,5,6,8,10,12,15]\n",
+    "    regs = [0.01, 0.05, 0.1, 0.2, 0.3, 0.5, 1,2, 3]\n",
+    "    \n",
+    "    david_val = np.zeros((len(emb_sizes) * len(regs), len(users_val)))\n",
+    "    david_test = np.zeros((len(emb_sizes) * len(regs), len(users_test)))\n",
     "\n",
     "    for i, emb_size in enumerate(emb_sizes):\n",
     "        for j, reg in enumerate(regs):\n",
-    "            for k, alpha in enumerate(alphas):\n",
-    "                giorgio = ALS(task=\"rating\", data_info=data_info, embed_size=emb_size, n_epochs=5,\n",
-    "                            reg=reg, alpha=alpha, seed=42)\n",
-    "                giorgio.fit(train_data, verbose=0, use_cg=False, n_threads=8, metrics=[\"rmse\", \"mae\", \"r2\"])\n",
-    "                david_val[len(regs)*len(alphas)*i+len(alphas)*j+k] = np.array(giorgio.predict(user=users_val, item=movies_val))\n",
-    "                david_test[len(regs)*len(alphas)*i+len(alphas)*j+k] = np.array(giorgio.predict(user=users_test, item=movies_test))\n",
+    "            giorgio = ALS(task=\"rating\", data_info=data_info, embed_size=emb_size, n_epochs=5,\n",
+    "                        reg=reg, seed=42)\n",
+    "            giorgio.fit(train_data, verbose=0, use_cg=False, n_threads=8, metrics=[\"rmse\", \"mae\", \"r2\"])\n",
+    "            david_val[len(regs)*i+j] = np.array(giorgio.predict(user=users_val, item=movies_val))\n",
+    "            david_test[len(regs)*i+j] = np.array(giorgio.predict(user=users_test, item=movies_test))\n",
     "\n",
     "    yhat_val = david_val.mean(axis=0)\n",
     "    yhat_test = david_test.mean(axis=0)\n",
@@ -5268,10 +5272,9 @@
    ],
    "source": [
     "# --------- generate submission -------\n",
-    "emb_sizes = [2,3,4,5,6,7,8,9,10,11,16,32,58]\n",
-    "regs = [0.1, 0.5, 1, 5, 10]\n",
-    "alphas = [0.01, 0.1, 1, 5, 8, 10, 100]\n",
-    "david = np.zeros((len(emb_sizes) * len(regs) * len(alphas), len(users_test)))\n",
+    "emb_sizes = [2,3,4,5,6,8,10,12,15]\n",
+    "regs = [0.01, 0.05, 0.1, 0.2, 0.3, 0.5, 1,2, 3]\n",
+    "david = np.zeros((len(emb_sizes) * len(regs), len(users_test)))\n",
     "\n",
     "train_pd = pd.read_csv(f'../data/data_train.csv')\n",
     "users_train, movies_train, ratings_train = extract_users_movies_ratings_lists(train_pd)\n",
@@ -5281,12 +5284,11 @@
     "\n",
     "for i, emb_size in enumerate(emb_sizes):\n",
     "    for j, reg in enumerate(regs):\n",
-    "        for k, alpha in enumerate(alphas):\n",
-    "            giorgio = ALS(task=\"rating\", data_info=data_info, embed_size=emb_size, n_epochs=5,\n",
-    "                        reg=reg, alpha=alpha, seed=42)\n",
-    "            giorgio.fit(train_data, verbose=2, use_cg=False, n_threads=8, metrics=[\"rmse\", \"mae\", \"r2\"])\n",
-    "            david[len(regs)*len(alphas)*i+len(alphas)*j+k] = np.array(giorgio.predict(user=users_test, item=movies_test))\n",
-    "            \n",
+    "        giorgio = ALS(task=\"rating\", data_info=data_info, embed_size=emb_size, n_epochs=5,\n",
+    "                    reg=reg, seed=42)\n",
+    "        giorgio.fit(train_data, verbose=2, use_cg=False, n_threads=8, metrics=[\"rmse\", \"mae\", \"r2\"])\n",
+    "        david[len(regs)*i+j] = np.array(giorgio.predict(user=users_test, item=movies_test))\n",
+    "\n",
     "yhat = david.mean(axis=0)\n",
     "save_predictions(f'../results_ensemble/ALS/ALS-predictedSubmission.csv', yhat)"
    ]
