--- a/NCF_distribution_exp_v3/run.ipynb
+++ b/NCF_distribution_exp_v3/run.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "28cdf75f",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "8215ddd8",
    "metadata": {},
    "outputs": [
@@ -245,20 +245,41 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_15377/2096515625.py:4: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
+      "/tmp/ipykernel_82696/2096515625.py:4: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
       "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
       "  df['rating'] = df['rating'].astype(np.int)\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('./ratings.csv')\n",
+    "df = pd.read_csv('../../ml-latest/ratings.csv')\n",
     "df = df[['userId', 'movieId', 'rating']]\n",
     "df = df.loc[df['rating'] % 1 == 0]\n",
     "df['rating'] = df['rating'].astype(np.int)\n",
     "df['userId'] = df['userId'].map(lambda x: x-1)\n",
     "df['movieId'] = df['movieId'].map(lambda x: x-1)\n",
     "df['rating'] = df['rating'].map(lambda x: x-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "252a2f46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.6042023345435243"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['rating'].mean()"
    ]
   },
   {
