--- a/ensemble/least_squares.ipynb
+++ b/ensemble/least_squares.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "BASE_MODEL_FOLDER = '../results_ensemble'\n",
     "MODEL_LIST = [\n",
-    "    #'AE_SWA',\n",
-    "    'AE_SWA_ensemble_mean',\n",
+    "    'AE_SWA',\n",
+    "    #'AE_SWA_ensemble_mean',\n",
     "    'ALS',\n",
-    "    'NCF_dist_exp_2_embeddings_SWA',\n",
     "    'NCF_dist_exp_SWA',\n",
     "    'SVDpp_ensemble_gaussian'\n",
     "]"
@@ -29,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,19 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "def combine_models(yhat, coeff):\n",
     "    coeff = np.array(coeff)\n",
-    "    coeff = coeff / coeff.sum()\n",
     "    return np.matmul(yhat, coeff)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_19914/610613689.py:4: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "/tmp/ipykernel_23869/610613689.py:4: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
       "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
       "  coeffs = np.linalg.lstsq(val_splits[i], val_truth[i])[0]\n"
      ]
@@ -149,16 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.01899595,  0.29532346,  0.03881829,  0.1311458 ,  0.55879441])"
+       "array([-0.00507428,  0.2378245 ,  0.16992366,  0.59928807])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,25 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coeffs[-1] = 0.65"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9712011354494331"
+       "0.9716547789811036"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,16 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.01899595,  0.29532346,  0.03881829,  0.1311458 ,  0.65      ])"
+       "array([-0.00507428,  0.2378245 ,  0.16992366,  0.59928807])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +223,7 @@
     "for m in MODEL_LIST:\n",
     "    name+=m\n",
     "    name+='-'\n",
-    "name+='-LSQ-0.65-results.csv'\n",
+    "name+='-LSQ-v2-results.csv'\n",
     "save_predictions(name, res_final)"
    ]
   }
