--- a/ensemble/model_analysis.ipynb
+++ b/ensemble/model_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,6 @@
     "    'AE_SWA',\n",
     "    'AE_SWA_ensemble_mean',\n",
     "    'ALS',\n",
-    "    'NCF_dist_exp_2_embeddings_SWA',\n",
     "    'NCF_dist_exp_SWA',\n",
     "    'SVDpp_ensemble_gaussian'\n",
     "]"
@@ -29,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,31 +49,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AE_SWA 0.9851473231240242\n",
-      "AE_SWA_ensemble_mean 0.9836823446045576\n",
-      "ALS 0.9802965577995295\n",
-      "NCF_dist_exp_2_embeddings_SWA 0.9893906598064908\n",
-      "NCF_dist_exp_SWA 0.987561614085287\n",
-      "SVDpp_ensemble_gaussian 0.9738645863054003\n"
+      "                             mean       std\n",
+      "AE_SWA                   0.985147  0.002839\n",
+      "AE_SWA_ensemble_mean     0.983682  0.002559\n",
+      "ALS                      0.980058  0.002280\n",
+      "NCF_dist_exp_SWA         0.987562  0.002001\n",
+      "SVDpp_ensemble_gaussian  0.973865  0.002502\n"
      ]
     }
    ],
    "source": [
+    "acc = []\n",
     "for m in MODEL_LIST:\n",
     "    tmp = []\n",
-    "    score = 0\n",
+    "    \n",
     "    for i in range(0,5):\n",
     "        df = pd.read_csv(f'{BASE_MODEL_FOLDER}/{m}/{m}_split_{i}_val_results.csv')\n",
     "        t = df['Prediction'].to_numpy()\n",
-    "        score+= rmse(t, val_truth[i])\n",
-    "    print(m, score/5)\n"
+    "        score = rmse(t, val_truth[i])\n",
+    "        tmp.append(score)\n",
+    "    \n",
+    "    res = pd.DataFrame(index=[m])\n",
+    "    tmp = np.array(tmp)\n",
+    "    res['mean'] = np.mean(tmp)\n",
+    "    res['std'] = np.std(tmp)\n",
+    "\n",
+    "    acc.append(res)\n",
+    "print(pd.concat(acc))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_val_matrix(split):\n",
+    "    tmp = []\n",
+    "    for m in MODEL_LIST:\n",
+    "        df = pd.read_csv(f'{BASE_MODEL_FOLDER}/{m}/{m}_split_{split}_val_results.csv')\n",
+    "        t = df['Prediction'].to_numpy()\n",
+    "\n",
+    "        tmp.append(t)\n",
+    "    return np.column_stack(tmp)\n",
+    "\n",
+    "\n",
+    "val_splits = []\n",
+    "for i in range(0, 5):\n",
+    "    val_splits.append(create_val_matrix(i))\n",
+    "\n",
+    "def combine_models(yhat, coeff):\n",
+    "    coeff = np.array(coeff)\n",
+    "    return np.matmul(yhat, coeff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_46902/1225453222.py:6: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  coeffs = np.linalg.lstsq(val_splits[i], val_truth[i])[0]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                             mean       std\n",
+      "AE_SWA                   0.985147  0.002839\n",
+      "AE_SWA_ensemble_mean     0.983682  0.002559\n",
+      "ALS                      0.980058  0.002280\n",
+      "NCF_dist_exp_SWA         0.987562  0.002001\n",
+      "SVDpp_ensemble_gaussian  0.973865  0.002502\n",
+      "Final ensemble           0.971667  0.002381\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmp = []\n",
+    "for val_on  in range(0, 5):\n",
+    "    a = []\n",
+    "    for i in range(0,5):\n",
+    "        if i != val_on:\n",
+    "            coeffs = np.linalg.lstsq(val_splits[i], val_truth[i])[0]\n",
+    "            a.append(coeffs)\n",
+    "    coeffs = np.column_stack(a).mean(axis=1)\n",
+    "    \n",
+    "    res = combine_models(val_splits[val_on], coeffs)\n",
+    "    tmp.append(rmse(res, val_truth[val_on]))\n",
+    "\n",
+    "res = pd.DataFrame(index=['Final ensemble'])\n",
+    "tmp = np.array(tmp)\n",
+    "res['mean'] = np.mean(tmp)\n",
+    "res['std'] = np.std(tmp)\n",
+    "acc.append(res)\n",
+    "print(pd.concat(acc))"
    ]
   }
  ],
