--- a/ensemble/least_squares.ipynb
+++ b/ensemble/least_squares.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,15 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "BASE_MODEL_FOLDER = '../results_ensemble'\n",
     "MODEL_LIST = [\n",
-    "    'AE_SWA',\n",
+    "    'AE_SWA_large',\n",
+    "    #'AE_SWA',\n",
     "    #'AE_SWA_ensemble_mean',\n",
-    "    'ALS',\n",
+    "    'ALS_old',\n",
     "    'NCF_dist_exp_SWA',\n",
     "    'SVDpp_ensemble_gaussian'\n",
     "]"
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_23869/610613689.py:4: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "/tmp/ipykernel_73469/610613689.py:4: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
       "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
       "  coeffs = np.linalg.lstsq(val_splits[i], val_truth[i])[0]\n"
      ]
@@ -147,16 +148,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.00507428,  0.2378245 ,  0.16992366,  0.59928807])"
+       "array([0.06188904, 0.27913845, 0.13833313, 0.52533407])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,16 +168,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9716547789811036"
+       "0.9709771320393543"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,16 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.00507428,  0.2378245 ,  0.16992366,  0.59928807])"
+       "array([0.06188904, 0.27913845, 0.13833313, 0.52533407])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +224,7 @@
     "for m in MODEL_LIST:\n",
     "    name+=m\n",
     "    name+='-'\n",
-    "name+='-LSQ-v2-results.csv'\n",
+    "name+='-LSQ-results.csv'\n",
     "save_predictions(name, res_final)"
    ]
   }
