--- a/ensemble/model_analysis.ipynb
+++ b/ensemble/model_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,15 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "BASE_MODEL_FOLDER = '../results_ensemble'\n",
     "MODEL_LIST = [\n",
-    "    'AE_SWA',\n",
-    "    'AE_SWA_ensemble_mean',\n",
-    "    'ALS',\n",
+    "    'AE_SWA_large',\n",
+    "    #'AE_SWA',\n",
+    "    #'AE_SWA_ensemble_mean',\n",
+    "    'ALS_old',\n",
     "    'NCF_dist_exp_SWA',\n",
     "    'SVDpp_ensemble_gaussian'\n",
     "]"
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -64,9 +65,8 @@
      "output_type": "stream",
      "text": [
       "                             mean       std\n",
-      "AE_SWA                   0.985147  0.002839\n",
-      "AE_SWA_ensemble_mean     0.983682  0.002559\n",
-      "ALS                      0.980058  0.002280\n",
+      "AE_SWA_large             0.983427  0.002613\n",
+      "ALS_old                  0.980297  0.002219\n",
       "NCF_dist_exp_SWA         0.987562  0.002001\n",
       "SVDpp_ensemble_gaussian  0.973865  0.002502\n"
      ]
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,29 +119,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_46902/1225453222.py:6: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  coeffs = np.linalg.lstsq(val_splits[i], val_truth[i])[0]\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "                             mean       std\n",
-      "AE_SWA                   0.985147  0.002839\n",
-      "AE_SWA_ensemble_mean     0.983682  0.002559\n",
-      "ALS                      0.980058  0.002280\n",
+      "AE_SWA_large             0.983427  0.002613\n",
+      "ALS_old                  0.980297  0.002219\n",
       "NCF_dist_exp_SWA         0.987562  0.002001\n",
       "SVDpp_ensemble_gaussian  0.973865  0.002502\n",
-      "Final ensemble           0.971667  0.002381\n"
+      "Final ensemble           0.970985  0.002393\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_46902/1501064865.py:6: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  coeffs = np.linalg.lstsq(val_splits[i], val_truth[i])[0]\n"
      ]
     }
    ],
@@ -163,8 +162,15 @@
     "res['mean'] = np.mean(tmp)\n",
     "res['std'] = np.std(tmp)\n",
     "acc.append(res)\n",
-    "print(pd.concat(acc))"
+    "print(pd.concat(acc))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
