update(ALS with old hyperparameters)

--- a/ensemble/model_analysis.ipynb
+++ b/ensemble/model_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "BASE_MODEL_FOLDER = '../results_ensemble'\n",
     "MODEL_LIST = [\n",
     "    'AE_SWA_large',\n",
-    "    #'AE_SWA',\n",
-    "    #'AE_SWA_ensemble_mean',\n",
-    "    'ALS_old',\n",
+    "    'ALS',\n",
     "    'NCF_dist_exp_SWA',\n",
     "    'SVDpp_ensemble_gaussian'\n",
     "]"
@@ -29,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,14 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +57,7 @@
      "text": [
       "                             mean       std\n",
       "AE_SWA_large             0.983427  0.002613\n",
-      "ALS_old                  0.980297  0.002219\n",
+      "ALS                      0.980297  0.002219\n",
       "NCF_dist_exp_SWA         0.987562  0.002001\n",
       "SVDpp_ensemble_gaussian  0.973865  0.002502\n"
      ]
@@ -94,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,28 +110,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_73590/1501064865.py:6: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  coeffs = np.linalg.lstsq(val_splits[i], val_truth[i])[0]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "                             mean       std\n",
       "AE_SWA_large             0.983427  0.002613\n",
-      "ALS_old                  0.980297  0.002219\n",
+      "ALS                      0.980297  0.002219\n",
       "NCF_dist_exp_SWA         0.987562  0.002001\n",
       "SVDpp_ensemble_gaussian  0.973865  0.002502\n",
       "Final ensemble           0.970985  0.002393\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_46902/1501064865.py:6: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  coeffs = np.linalg.lstsq(val_splits[i], val_truth[i])[0]\n"
      ]
     }
    ],
