--- a/ensemble/model_analysis.ipynb
+++ b/ensemble/model_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "BASE_MODEL_FOLDER = '../results_ensemble'\n",
     "MODEL_LIST = [\n",
     "    'AE_SWA_large',\n",
-    "    'ALS',\n",
+    "    'ALS_ensemble',\n",
     "    'NCF_dist_exp_SWA',\n",
     "    'SVDpp_ensemble_gaussian'\n",
     "]"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
      "text": [
       "                             mean       std\n",
       "AE_SWA_large             0.983427  0.002613\n",
-      "ALS                      0.980297  0.002219\n",
+      "ALS_ensemble             0.980297  0.002219\n",
       "NCF_dist_exp_SWA         0.987562  0.002001\n",
       "SVDpp_ensemble_gaussian  0.973865  0.002502\n"
      ]
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,28 +110,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_73590/1501064865.py:6: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  coeffs = np.linalg.lstsq(val_splits[i], val_truth[i])[0]\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "                             mean       std\n",
       "AE_SWA_large             0.983427  0.002613\n",
-      "ALS                      0.980297  0.002219\n",
+      "ALS_ensemble             0.980297  0.002219\n",
       "NCF_dist_exp_SWA         0.987562  0.002001\n",
       "SVDpp_ensemble_gaussian  0.973865  0.002502\n",
       "Final ensemble           0.970985  0.002393\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_179199/1501064865.py:6: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  coeffs = np.linalg.lstsq(val_splits[i], val_truth[i])[0]\n"
      ]
     }
    ],
