rename(NCF dist to PNCF)

--- a/paper_generate_graphs/ensemble.ipynb
+++ b/paper_generate_graphs/ensemble.ipynb
@@ -83,7 +83,7 @@
     "    'AE_SWA_large',\n",
     "    #'AE_SWA',\n",
     "    #'AE_SWA_ensemble_mean',\n",
-    "    'NCF_dist_exp_SWA',\n",
+    "    'PNCF',\n",
     "    'ALS_old',\n",
     "    'SVDpp_ensemble_gaussian'\n",
     "]\n",
@@ -151,7 +151,7 @@
        "      <td>0.002607</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>NCF_dist_exp_SWA</th>\n",
+       "      <th>PNCF</th>\n",
        "      <td>0.977979</td>\n",
        "      <td>0.002373</td>\n",
        "    </tr>\n",
@@ -172,7 +172,7 @@
       "text/plain": [
        "                             mean       std\n",
        "AE_SWA_large             0.983403  0.002607\n",
-       "NCF_dist_exp_SWA         0.977979  0.002373\n",
+       "PNCF         0.977979  0.002373\n",
        "ALS_old                  0.974047  0.002329\n",
        "SVDpp_ensemble_gaussian  0.970985  0.002393"
       ]
@@ -216,7 +216,7 @@
          "type": "scatter",
          "x": [
           "AE_SWA_large",
-          "NCF_dist_exp_SWA",
+          "PNCF",
           "ALS_old",
           "SVDpp_ensemble_gaussian"
          ],
@@ -1092,7 +1092,7 @@
          ],
          "tickvals": [
           "AE_SWA_large",
-          "NCF_dist_exp_SWA",
+          "PNCF",
           "ALS_old",
           "SVDpp_ensemble_gaussian"
          ],
@@ -1125,7 +1125,7 @@
     "fig = px.line(df, x='models', y=['mean'], title='Ensemble improvement')\n",
     "fig.update_xaxes(ticktext=['AE', 'PNCF', 'ALS', 'SVDpp'], tickvals=[\n",
     "    'AE_SWA_large',\n",
-    "    'NCF_dist_exp_SWA',\n",
+    "    'PNCF',\n",
     "    'ALS_old',\n",
     "    'SVDpp_ensemble_gaussian'\n",
     "], title_text='model added to the ensemble')\n",
@@ -1193,7 +1193,7 @@
        "      <td>0.002607</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>NCF_dist_exp_SWA</th>\n",
+       "      <th>PNCF</th>\n",
        "      <td>0.977979</td>\n",
        "      <td>0.002373</td>\n",
        "    </tr>\n",
@@ -1214,7 +1214,7 @@
       "text/plain": [
        "                             mean       std\n",
        "AE_SWA_large             0.983403  0.002607\n",
-       "NCF_dist_exp_SWA         0.977979  0.002373\n",
+       "PNCF         0.977979  0.002373\n",
        "ALS_old                  0.974047  0.002329\n",
        "SVDpp_ensemble_gaussian  0.970985  0.002393"
       ]
