--- a/ensemble/least_squares.ipynb
+++ b/ensemble/least_squares.ipynb
@@ -20,7 +20,7 @@
     "MODEL_LIST = [\n",
     "    'AE_SWA_large',\n",
     "    'ALS_ensemble',\n",
-    "    'NCF_dist_exp_SWA',\n",
+    "    'PNCF',\n",
     "    'SVDpp_ensemble'\n",
     "]"
    ]
@@ -124,7 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_180906/610613689.py:4: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "/tmp/ipykernel_181778/610613689.py:4: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
       "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
       "  coeffs = np.linalg.lstsq(val_splits[i], val_truth[i])[0]\n"
      ]
