update(NCF baseline)

--- a/paper_generate_graphs/ensemble.ipynb
+++ b/paper_generate_graphs/ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,29 +63,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_111671/3099422576.py:22: FutureWarning:\n",
-      "\n",
-      "`rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "/tmp/ipykernel_264705/4084867148.py:26: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
       "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "\n"
+      "  coeffs = np.linalg.lstsq(val_splits[i], val_truth[i])[0]\n"
      ]
     }
    ],
    "source": [
     "MODEL_LIST = [\n",
-    "    'AE_SWA_large',\n",
-    "    #'AE_SWA',\n",
-    "    #'AE_SWA_ensemble_mean',\n",
+    "    'AE',\n",
+    "    'ALS_ensemble',\n",
     "    'PNCF',\n",
-    "    'ALS_old',\n",
-    "    'SVDpp_ensemble_gaussian'\n",
+    "    'SVDpp_ensemble'\n",
+    "]\n",
+    "MODEL_LIST_LABELS = [\n",
+    "    'AE',\n",
+    "    'ALS ens. ',\n",
+    "    'PNCF',\n",
+    "    'SVD++ ens.'\n",
     "]\n",
     "models = []\n",
     "acc = []\n",
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -146,22 +148,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>AE_SWA_large</th>\n",
+       "      <th>AE</th>\n",
        "      <td>0.983403</td>\n",
        "      <td>0.002607</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>PNCF</th>\n",
-       "      <td>0.977979</td>\n",
-       "      <td>0.002373</td>\n",
+       "      <th>ALS_ensemble</th>\n",
+       "      <td>0.975497</td>\n",
+       "      <td>0.002374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ALS_old</th>\n",
+       "      <th>PNCF</th>\n",
        "      <td>0.974047</td>\n",
        "      <td>0.002329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>SVDpp_ensemble_gaussian</th>\n",
+       "      <th>SVDpp_ensemble</th>\n",
        "      <td>0.970985</td>\n",
        "      <td>0.002393</td>\n",
        "    </tr>\n",
@@ -170,14 +172,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                             mean       std\n",
-       "AE_SWA_large             0.983403  0.002607\n",
-       "PNCF         0.977979  0.002373\n",
-       "ALS_old                  0.974047  0.002329\n",
-       "SVDpp_ensemble_gaussian  0.970985  0.002393"
+       "                    mean       std\n",
+       "AE              0.983403  0.002607\n",
+       "ALS_ensemble    0.975497  0.002374\n",
+       "PNCF            0.974047  0.002329\n",
+       "SVDpp_ensemble  0.970985  0.002393"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -215,15 +217,15 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          "AE_SWA_large",
+          "AE",
+          "ALS_ensemble",
           "PNCF",
-          "ALS_old",
-          "SVDpp_ensemble_gaussian"
+          "SVDpp_ensemble"
          ],
          "xaxis": "x",
          "y": [
           0.9834026052102942,
-          0.9779794389574563,
+          0.9754969101794184,
           0.9740465267777518,
           0.9709852573308565
          ],
@@ -1086,15 +1088,15 @@
          ],
          "ticktext": [
           "AE",
+          "ALS ens. ",
           "PNCF",
-          "ALS",
-          "SVDpp"
+          "SVD++ ens."
          ],
          "tickvals": [
-          "AE_SWA_large",
+          "AE",
+          "ALS_ensemble",
           "PNCF",
-          "ALS_old",
-          "SVDpp_ensemble_gaussian"
+          "SVDpp_ensemble"
          ],
          "title": {
           "text": "model added to the ensemble"
@@ -1123,12 +1125,7 @@
     "\n",
     "df['models'] = df.index\n",
     "fig = px.line(df, x='models', y=['mean'], title='Ensemble improvement')\n",
-    "fig.update_xaxes(ticktext=['AE', 'PNCF', 'ALS', 'SVDpp'], tickvals=[\n",
-    "    'AE_SWA_large',\n",
-    "    'PNCF',\n",
-    "    'ALS_old',\n",
-    "    'SVDpp_ensemble_gaussian'\n",
-    "], title_text='model added to the ensemble')\n",
+    "fig.update_xaxes(ticktext=MODEL_LIST_LABELS, tickvals=MODEL_LIST, title_text='model added to the ensemble')\n",
     "\n",
     "newnames ={'mean': 'ensemble'}\n",
     "fig.for_each_trace(lambda t: t.update(name = newnames[t.name],\n",
@@ -1158,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1188,22 +1185,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>AE_SWA_large</th>\n",
+       "      <th>AE</th>\n",
        "      <td>0.983403</td>\n",
        "      <td>0.002607</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>PNCF</th>\n",
-       "      <td>0.977979</td>\n",
-       "      <td>0.002373</td>\n",
+       "      <th>ALS_ensemble</th>\n",
+       "      <td>0.975497</td>\n",
+       "      <td>0.002374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>ALS_old</th>\n",
+       "      <th>PNCF</th>\n",
        "      <td>0.974047</td>\n",
        "      <td>0.002329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>SVDpp_ensemble_gaussian</th>\n",
+       "      <th>SVDpp_ensemble</th>\n",
        "      <td>0.970985</td>\n",
        "      <td>0.002393</td>\n",
        "    </tr>\n",
@@ -1212,14 +1209,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                             mean       std\n",
-       "AE_SWA_large             0.983403  0.002607\n",
-       "PNCF         0.977979  0.002373\n",
-       "ALS_old                  0.974047  0.002329\n",
-       "SVDpp_ensemble_gaussian  0.970985  0.002393"
+       "                    mean       std\n",
+       "AE              0.983403  0.002607\n",
+       "ALS_ensemble    0.975497  0.002374\n",
+       "PNCF            0.974047  0.002329\n",
+       "SVDpp_ensemble  0.970985  0.002393"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
