--- a/analysis_baseline.ipynb
+++ b/analysis_baseline.ipynb
@@ -19,7 +19,8 @@
     "BASE_MODEL_FOLDER = './results_baseline'\n",
     "MODEL_LIST = [\n",
     "    'NCF',\n",
-    "    'ALS'\n",
+    "    'ALS',\n",
+    "    'SVDpp'\n",
     "]"
    ]
   },
@@ -53,9 +54,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         mean       std\n",
-      "NCF  1.011382  0.003598\n",
-      "ALS  0.995433  0.002362\n"
+      "           mean       std\n",
+      "NCF    1.011382  0.003598\n",
+      "ALS    0.995433  0.002362\n",
+      "SVDpp  1.115091  0.002555\n"
      ]
     }
    ],
